--- a/flex/02-flex-header/style.css
+++ b/flex/02-flex-header/style.css
@@ -1,6 +1,17 @@
 .header  {
   font-family: monospace;
   background: papayawhip;
+  flex-direction: row;
+  display: flex;
+  padding: 8px;
+  flex: 1 1 auto;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.header div {
+  flex: 1 1 auto;
+  
 }
 
 .logo {
@@ -9,11 +20,21 @@
   color: tomato;
   background: white;
   padding: 4px 32px;
+  align-items: center;
+  justify-content: center;
+  display: flex;
+  flex: 1 1 auto;
 }
 
 ul {
   /* this removes the dots on the list items*/
   list-style-type: none;
+  flex-direction: row;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 8px;
+  flex: 1 1 auto;
 }
 
 a {
