--- a/flex/04-flex-information/style.css
+++ b/flex/04-flex-information/style.css
@@ -10,6 +10,10 @@ img {
 .title {
   font-size: 36px;
   font-weight: 900;
+  align-items: center;
+  justify-content: center;
+  display: flex;
+  padding: 32px;
 }
 
 /* do not edit this footer */
@@ -23,4 +27,19 @@ img {
   align-items: center;
   justify-content: center;
   background: #eee;
+}
+
+.info {
+  display: flex;
+  flex-direction: row;
+  gap: 52px;
+  max width: 200px;
+}
+
+.text {
+flex-direction: column;
+display: flex;
+justify-content: center;
+align-items: center;
+
 }
