--- a/flex/05-flex-modal/style.css
+++ b/flex/05-flex-modal/style.css
@@ -51,6 +51,7 @@ body {
 button {
   padding: 8px 16px;
   border-radius: 8px;
+  
 }
 
 button.continue {
@@ -63,4 +64,15 @@ button.cancel {
   background: white;
   border: 1px solid #ddd;
   color: royalblue;
+}
+
+.header {
+
+
+}
+
+.text {
+
+
+
 }
